# jenesis

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: add-contracts.md  add-profile.md  compile-contracts.md  deploy-contracts.md  getting-started.md  index.md  keys.md  use-contracts.md
docs/css/: my-styles.css
scripts/: do_release.py
src/haul/: cli.py
src/haul/cmd/: compile.py  init.py  new.py  run.py  shell.py
src/haul/cmd/add/: __init__.py  contract.py
src/haul/cmd/alpha/: __init__.py  deploy.py  run.py  shell.py
src/haul/config/: __init__.py  extract.py
src/haul/contracts/: __init__.py  build.py  deploy.py  detect.py  monkey.py  networks.py  observer.py
src/haul/keyring/: __init__.py
src/haul/tasks/: monitor.py
src/jenesis/: cli.py
src/jenesis/cmd/: attach.py  compile.py  deploy.py  init.py  network.py  new.py  run.py  shell.py  update.py
src/jenesis/config/: __init__.py  extract.py
src/jenesis/contracts/: __init__.py  build.py  deploy.py  detect.py  monkey.py  networks.py  observer.py  schema.py
src/jenesis/keyring/: __init__.py  errors.py
src/jenesis/network/: __init__.py
src/jenesis/node/: __init__.py
src/jenesis/tasks/: __init__.py  container.py  image.py  monitor.py  utils.py
tests/haul/config/: test_parsing.py
tests/jenesis/cmd/: test_add_contract.py  test_add_profile.py  test_attach.py  test_compile.py  test_deploy.py  test_deploy_run.py  test_deploy_run_attach.py  test_init.py  test_keys.py  test_new.py  test_run.py
tests/jenesis/config/: test_add_contract.py  test_compile.py  test_init.py  test_parsing.py
(+26 files in other folders)
