[tool.poetry]
name = "haul"
version = "0.1.0"
description = ""
authors = ["Ed FitzGerald <edward.fitzgerald@fetch.ai>"]
license = "Apache"

[tool.poetry.scripts]
haul = 'haul.cli:main'

[tool.poetry.dependencies]
python = "^3.7"
docker = "~5.0.3"
blessings = "^1.7"
ptpython = "^3.0.20"
cosmpy = {git = "https://github.com/fetchai/cosmpy.git", rev = "v0.3.1"}
toml = "^0.10.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.1.1"
pylint = "^2.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
