[tool.poetry]
name = "jenesis"
version = "0.6.1"
description = "Command line tool for rapid CosmWasm-based smart contract development"
authors = ["Ed FitzGerald <edward.fitzgerald@fetch.ai>", "James Riehl <james.riehl@fetch.ai>", "Alejandro Madrigal <alejandro.madrigal@fetch.ai>"]
license = "Apache"
readme = "README.md"

[tool.poetry.scripts]
jenesis = 'jenesis.cli:main'

[tool.poetry.dependencies]
python = "^3.8"
docker = ">=5.0.3,<6.1.0"
blessings = "^1.7"
ptpython = "^3.0.23"
toml = "^0.10.2"
tqdm = "^4.64.0"
cosmpy = "^0.9.1"
mkdocs = "^1.3.1"
mkdocs-material = "^8.3.9"
keyring = "^23.9.0"
jsonschema = "^4.15.0"
graphlib-backport = "^1.0.3"
jwskate = ">=0.4.1,<0.6.0"
makefun = "^1.15.0"

[tool.poetry.dev-dependencies]
coverage = "^7.0.3"
pytest = "^7.1.3"
pylint = "^2.15.9"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^5.0.4"
darglint = "^1.8.1"
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
